--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Battery API 🔋</h1>
       <p>This Project done by using web browser API</p>
-      <a href="">Take This course</a>
+      <a href="">Take a Look</a>
     </header>
 
     <div class="battery-container">
